--- a/RProj1_Template.Rmd
+++ b/RProj1_Template.Rmd
@@ -15,9 +15,11 @@ library(datasauRus)
 
 ### Exercise 1
 
-The datasaurus dozen file has 1846 rows. The variables included are dataset,x, and y.
+The datasaurus dozen file has 1846 rows and 3 columns. The variables included are dataset,x, and y.
 
 ### Exercise 2
+
+Plotting Dino Data
 
 ```{r plot-dino, fig.height=3, fig.width=6}
 dino_data <- datasaurus_dozen %>%
@@ -26,6 +28,8 @@ ggplot(data = dino_data, mapping = aes(x = x, y = y)) +
   geom_point()
 ```
 
+Calculating correlation coefficient
+
 ```{r cor-dino}
 dino_data %>%
   summarize(r = cor(x, y))
@@ -33,16 +37,20 @@ dino_data %>%
 
 ### Exercise 3
 
-(Add code and narrative as needed. Note that the R chunks are labeled with `plot-star` and `cor-star` to provide spaces to place the code for plotting and calculating the correlation coefficient. To finish, remember to clean up the narrative by removing these instructions.)
-
-Blah blah blah...
+Plotting Star Data
 
 ```{r plot-star}
+star_data <- datasaurus_dozen %>%
+  filter(dataset == "star")
+ggplot(data = star_data, mapping = aes(x = x, y = y)) +
+  geom_point()
 ```
 
-I'm some text, you should replace me with more meaningful text...
+Calculating correlation coefficient
 
 ```{r cor-star}
+star_data %>%
+  summarize(r = cor(x, y))
 ```
 
 ### Exercise 4
